--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bidder - contact</title>
+        <title>Bidder - Contacts</title>
     
         <!--ICONSCOUT CDN-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
@@ -17,11 +17,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap" rel="stylesheet">
     
     
-        
+        <!--SWIPER JS-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    
     
     
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'css/about.css' %}">
     </head>
 <body>
     <nav>
@@ -30,7 +31,7 @@
             <ul class="nav__menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'user-login' %}">Login</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li><a href="{% url 'user-create' %}">Registration</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="property.html">Property</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
@@ -52,7 +53,7 @@
     <div class="container contact__container">
         <aside class="contact__aside">
             <div class="aside__image">
-                <img src="./images/contact.svg">
+                <img src="{% static 'contact.svg' %}">
             </div>
             <h2>Contact Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis necessitatibus vel animi ad eum, cumque incidunt, quia, nihil rem ipsa iure veritatis! Ducimus unde dignissimos dicta, similique odio voluptatem tempore?</p>
@@ -123,7 +124,7 @@
             <ul class="permalinks">
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'user-login' %}">Login</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li><a href="{% url 'user-create' %}">Registration</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="property.html">Property</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
@@ -176,7 +177,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="main.js"></script>
+<script src="{% static 'js/main.js' %}"></script>
 
 
 <script>
