--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bidder - login</title>
+        <title>Bidder - Login</title>
     
         <!--ICONSCOUT CDN-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
@@ -18,11 +18,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap" rel="stylesheet">
     
     
-        
+        <!--SWIPER JS-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    
     
     
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'css/about.css' %}">
     </head>
 <body>
     <nav>
@@ -31,7 +32,7 @@
             <ul class="nav__menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'user-login' %}">Login</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li><a href="{% url 'user-create' %}">Registration</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="property.html">Property</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
@@ -46,85 +47,98 @@
       <h1>Login</h1>
       <form method="POST" action="{% url 'user-login' %}">
         {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
+        <label for="email">Email:</label><br><br>
+        <input type="email" id="email" name="email", placeholder="care@bidder.com"><br><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
+        <input type="password" id="password" name="password", placeholder="password"><br><br>
         <input type="submit" value="Log In">
       </form>
       
-      <p>Don't have an account? <a href="registration.html">Sign up</a></p>
+      <p>Don't have an account? <a href="{% url 'user-create' %}">Sign up</a></p>
     </div>
 
-    <footer>
-        <div class="container footer__container">
-            <div class="footer__1">
-                <a href="{% url 'home' %}" class="footer__logo"><h4>Bidder</h4></a>
-                <p>
-                    ONLINE AUCTION MANAGEMENT SYSTEM
-                </p>
-            </div>
-    
-            <div class="footer__2">
-                <h4>Permalinks</h4>
-                <ul class="permalinks">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'user-login' %}">Login</a></li>
-                    <li><a href="registration.html">Registration</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="property.html">Property</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
-                </ul>
-            </div>
-    
-            <div class="footer__3">
-                <h4>Primacy</h4>
-                <ul class="privacy">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms and conditions</a></li>
-                    <li><a href="#">Refund Policy</a></li>
-                </ul>
-            </div>
-    
-            <div class="footer__4">
-                <h4>Contact Us</h4>
-                <div>
-                    <p>+91 0000000000</p>
-                    <p>care@bidder.com</p>
-                </div>
-                
-            
-    
-            
-            <ul class="footer__socials ">
-                <li>
-                    <a href="#"><i class="uil uil-facebook-f"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="uil uil-instagram-alt"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="uil uil-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
-                </li>
-            </ul>
-        </div>
-    
-        
-        </div>
-        
-        <div class="footer__copyright">
-            <small>Copyright &copy; Bidder</small>
-        </div>
-    </footer>
-    
-    <script src="main.js"></script>
-
-    
-    </body>
 
 
-    </html>
+
+
+    <!-- Add the pop-up message box -->
+<div class="error-popup">
+    <div class="error-message" id="error-message"></div>
+    <button class="close-btn" id="close-btn">Close</button>
+</div>
+  
+  <!-- Add the CSS styles for the pop-up -->
+  <style>
+  /* Style the pop-up */
+  .error-popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+  }
+  
+  /* Style the error message */
+  .error-message {
+    background-color: rgb(240, 237, 237);
+    color: #f44336;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 5px;
+    width: 50%;
+    text-align: center;
+  }
+  
+  /* Style the close button */
+  .close-btn {
+    padding: 10px;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    margin-top: 10px;
+    border-radius: 10px;
+  }
+  </style>
+  
+  <!-- Add the JavaScript code to display the pop-up -->
+  <script>
+  // Get the pop-up elements
+  const errorPopup = document.querySelector(".error-popup");
+  const errorMessage = document.getElementById("error-message");
+  const closeBtn = document.getElementById("close-btn");
+  
+  // Add an event listener to the close button to hide the pop-up
+  closeBtn.addEventListener("click", () => {
+    errorPopup.style.display = "none";
+  });
+  
+  // Get the error message from Django messages and display it in the pop-up
+  const error = "{% if messages %}{% for message in messages %}{{ message }}{% endfor %}{% endif %}";
+  if (error !== "") {
+    errorMessage.innerHTML = error;
+    errorPopup.style.display = "block";
+  }
+  </script>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
+    
+    
+    
+<script src="{% static 'js/main.js' %}"></script>
+</body>
+
+
+</html>
     
