--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,29 +1,30 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Auction Management System Using HTML, CSS & JavaScript</title>
-
-    <!--ICONSCOUT CDN-->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
-
-
-    <!--GOOGLE FONTS (MONTSERRAT)-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap" rel="stylesheet">
-
-
-    <!--SWIPER JS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-
-
-
-    <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="./CSS/registration.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bidder - SignUp</title>
+    
+        <!--ICONSCOUT CDN-->
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+    
+    
+        <!--GOOGLE FONTS (MONTSERRAT)-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap" rel="stylesheet">
+    
+    
+        <!--SWIPER JS-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    
+    
+    
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    </head>
 <body>
     <nav>
         <div class="container nav__container">
@@ -31,7 +32,7 @@
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li><a href="{% url 'user-create' %}">Registration</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="property.html">Property</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -43,8 +44,9 @@
     </nav>
     <!--==================================END OF NAVBAR===========================================-->
 
-    <form id="userForm" action="#" onsubmit="return validation()">
-    
+    <form id="userForm" action="#" onsubmit="return validation()" method="POST" action="{% url 'user-create' %}">
+        {% csrf_token %}
+        
         <div class = "container">
         <div class="formControl">
             <h1>User Registeration Form</h1>
@@ -128,7 +130,7 @@
 		}
 		
 		if (name.length < 5){
-			document.getElementById('u_name').innerHTML = "* First Name Lenght should be greater than 5";
+			document.getElementById('u_name').innerHTML = "* First Name Length should be greater than 5";
 			return false;
 		}
 		
@@ -189,6 +191,68 @@
 	}
 </script>
 
-<script src="./main.js"></script>
+    <!-- Add the pop-up message box -->
+    <div class="error-popup">
+        <div class="error-message" id="error-message"></div>
+        <button class="close-btn" id="close-btn">Close</button>
+    </div>
+      
+      <!-- Add the CSS styles for the pop-up -->
+      <style>
+      /* Style the pop-up */
+      .error-popup {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+      }
+      
+      /* Style the error message */
+      .error-message {
+        background-color: rgb(240, 237, 237);
+        color: #f44336;
+        margin: 15% auto;
+        padding: 20px;
+        border-radius: 5px;
+        width: 50%;
+        text-align: center;
+      }
+      
+      /* Style the close button */
+      .close-btn {
+        padding: 10px;
+        background-color: #f44336;
+        color: white;
+        border: none;
+        margin-top: 10px;
+        border-radius: 10px;
+      }
+      </style>
+      
+      <!-- Add the JavaScript code to display the pop-up -->
+      <script>
+      // Get the pop-up elements
+      const errorPopup = document.querySelector(".error-popup");
+      const errorMessage = document.getElementById("error-message");
+      const closeBtn = document.getElementById("close-btn");
+      
+      // Add an event listener to the close button to hide the pop-up
+      closeBtn.addEventListener("click", () => {
+        errorPopup.style.display = "none";
+      });
+      
+      // Get the error message from Django messages and display it in the pop-up
+      const error = "{% if messages %}{% for message in messages %}{{ message }}{% endfor %}{% endif %}";
+      if (error !== "") {
+        errorMessage.innerHTML = error;
+        errorPopup.style.display = "block";
+      }
+      </script>
+
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
