--- a/templates/about.html
+++ b/templates/about.html
@@ -1,33 +1,40 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bidder - About</title>
-    
-        <!--ICONSCOUT CDN-->
-        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
-    
-    
-        <!--GOOGLE FONTS (MONTSERRAT)-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap" rel="stylesheet">
-    
-    
-        <!--SWIPER JS-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    
-    
-    
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bidder - About</title>
+
+    <!--ICONSCOUT CDN-->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+
+
+    <!--GOOGLE FONTS (MONTSERRAT)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap"
+        rel="stylesheet">
+
+
+    <!--SWIPER JS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/about.css' %}">
+
+</head>
+
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="/"><h4>Bidder</h4></a>
+            <a href="/">
+                <h4>Bidder</h4>
+            </a>
             <ul class="nav__menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'user-login' %}">Login</a></li>
@@ -41,7 +48,7 @@
 
         </div>
     </nav>
-<!--==============================END OF NAV BAR=================================-->
+    <!--==============================END OF NAV BAR=================================-->
 
 
 
@@ -57,7 +64,9 @@
             <div class="about__achievements-right">
                 <h1>Achievements</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident tempore deserunt voluptatem perferendis error sed et, aspernatur alias libero minima placeat? Necessitatibus deleniti asperiores vel inventore provident reiciendis delectus.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident tempore deserunt
+                    voluptatem perferendis error sed et, aspernatur alias libero minima placeat? Necessitatibus deleniti
+                    asperiores vel inventore provident reiciendis delectus.
                 </p>
 
                 <div class="achievements__cards">
@@ -140,55 +149,57 @@
                 </div>
             </article>
 
-            
+
 
         </div>
     </section>
 
     <!--=============================END OF TEAM ===========================-->
 
-        <!--=============================FOOTER===========================-->
+    <!--=============================FOOTER===========================-->
 
-        <footer>
-            <div class="container footer__container">
-                <div class="footer__1">
-                    <a href="{% url 'home' %}" class="footer__logo"><h4>Bidder</h4></a>
-                    <p>
-                        ONLINE AUCTION MANAGEMENT SYSTEM
-                    </p>
+    <footer>
+        <div class="container footer__container">
+            <div class="footer__1">
+                <a href="{% url 'home' %}" class="footer__logo">
+                    <h4>Bidder</h4>
+                </a>
+                <p>
+                    ONLINE AUCTION MANAGEMENT SYSTEM
+                </p>
+            </div>
+
+            <div class="footer__2">
+                <h4>Permalinks</h4>
+                <ul class="permalinks">
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'user-login' %}">Login</a></li>
+                    <li><a href="{% url 'user-create' %}">Registration</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="property.html">Property</a></li>
+                    <li><a href="{% url 'contact' %}">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__3">
+                <h4>Primacy</h4>
+                <ul class="privacy">
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and conditions</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__4">
+                <h4>Contact Us</h4>
+                <div>
+                    <p>+91 0000000000</p>
+                    <p>care@bidder.com</p>
                 </div>
-        
-                <div class="footer__2">
-                    <h4>Permalinks</h4>
-                    <ul class="permalinks">
-                        <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href="{% url 'user-login' %}">Login</a></li>
-                        <li><a href="{% url 'user-create' %}">Registration</a></li>
-                        <li><a href="{% url 'about' %}">About</a></li>
-                        <li><a href="property.html">Property</a></li>
-                        <li><a href="{% url 'contact' %}">Contact</a></li>
-                    </ul>
-                </div>
-        
-                <div class="footer__3">
-                    <h4>Primacy</h4>
-                    <ul class="privacy">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms and conditions</a></li>
-                        <li><a href="#">Refund Policy</a></li>
-                    </ul>
-                </div>
-        
-                <div class="footer__4">
-                    <h4>Contact Us</h4>
-                    <div>
-                        <p>+91 0000000000</p>
-                        <p>care@bidder.com</p>
-                    </div>
-                    
-                
-        
-                
+
+
+
+
                 <ul class="footer__socials ">
                     <li>
                         <a href="#"><i class="uil uil-facebook-f"></i></a>
@@ -204,17 +215,18 @@
                     </li>
                 </ul>
             </div>
-        
-            
-            </div>
-            
-            <div class="footer__copyright">
-                <small>Copyright &copy; Bidder</small>
-            </div>
-        </footer>
-         
 
-        <script src="{% static 'js/main.js' %}"></script>
-        
-    </body>
-    </html>
+
+        </div>
+
+        <div class="footer__copyright">
+            <small>Copyright &copy; Bidder</small>
+        </div>
+    </footer>
+
+
+    <script src="{% static 'js/main.js' %}"></script>
+
+</body>
+
+</html>
