--- a/templates/about.html
+++ b/templates/about.html
@@ -33,14 +33,22 @@
     <nav>
         <div class="container nav__container">
             <a href="/">
-                <h4>Bidder</h4>
+                {% if user.is_authenticated %}
+                <h4>Welcome to Bidder, {{ user.full_name }}!</h4>
+                {% else %}
+                <h4>Welcome to Bidder!</h4>
+                {% endif %}
             </a>
             <ul class="nav__menu">
                 <li><a href="/">Home</a></li>
+                {% if not user.is_authenticated %}
                 <li><a href="{% url 'user-login' %}">Login</a></li>
                 <li><a href="{% url 'user-create' %}">Registration</a></li>
+                {% else %}
+                <li><a href="{% url 'user-logout' %}">Logout</a></li>
+                {% endif %}
                 <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="property.html">Property</a></li>
+                <li><a href="{% url 'list-running-auctions' %}">Property</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
@@ -173,10 +181,14 @@
                 <h4>Permalinks</h4>
                 <ul class="permalinks">
                     <li><a href="{% url 'home' %}">Home</a></li>
+                    {% if not user.is_authenticated %}
                     <li><a href="{% url 'user-login' %}">Login</a></li>
                     <li><a href="{% url 'user-create' %}">Registration</a></li>
+                    {% else %}
+                    <li><a href="{% url 'user-logout' %}">Logout</a></li>
+                    {% endif %}
                     <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="property.html">Property</a></li>
+                    <li><a href="{% url 'list-running-auctions' %}">Property</a></li>
                     <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
             </div>
