--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,26 +15,38 @@
     <!--GOOGLE FONTS (MONTSERRAT)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wgt@300:400:500:600:700:800:900&display=swap"
+        rel="stylesheet">
 
 
     <!--SWIPER JS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
 
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="/"><h4>Bidder</h4></a>
+            <a href="/">
+                {% if user.is_authenticated %}
+                <h4>Welcome to Bidder, {{ user.full_name }}!</h4>
+                {% else %}
+                <h4>Welcome to Bidder!</h4>
+                {% endif %}
+            </a>
             <ul class="nav__menu">
                 <li><a href="/">Home</a></li>
+                {% if not user.is_authenticated %}
                 <li><a href="{% url 'user-login' %}">Login</a></li>
                 <li><a href="{% url 'user-create' %}">Registration</a></li>
+                {% else %}
+                <li><a href="{% url 'user-logout' %}">Logout</a></li>
+                {% endif %}
                 <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="property.html">Property</a></li>
+                <li><a href="{% url 'list-running-auctions' %}">Property</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
@@ -48,11 +61,13 @@
             <div class="header__left">
                 <h1>Online Auction Management System</h1>
                 <p>
-                    
-                    An online auction project that holds online auctions of various products on a website and serves sellers and bidders accordingly. The system is designed to allow users to set up their products for auctions and bidders to register and bid for various products available for bidding.
+
+                    An online auction project that holds online auctions of various products on a website and serves
+                    sellers and bidders accordingly. The system is designed to allow users to set up their products for
+                    auctions and bidders to register and bid for various products available for bidding.
 
                 </p>
-                <a href="property.html" class="btn btn-priamry">Start Bidder</a>
+                <a href="{% url 'list-running-auctions' %}" class="btn btn-priamry">Start Bid</a>
 
             </div>
 
@@ -70,71 +85,76 @@
     <section class="categories">
         <div class="container categories__container">
             <div class="categories__left">
-            <h1>Properties</h1>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus sed cum dolores, dicta quas deserunt, nulla nostrum minima voluptatibus distinctio delectus. Dicta quos consequatur voluptates magnam, ex reiciendis nobis consectetur.
-            </p>
-            <a href="#" class="btn">More Properties</a>
-        </div>
-
-        <div class="categories__right">
-            <article class="category">
-                <span class="category__icon"><i class="uil uil-home"></i>
-                </span>
-                <h5>Unmoderised house and flats</h5>
+                <h1>Properties</h1>
                 <p>
-                    We’re often asked whether it’s a good idea to carry out improvement work to an unmodernised property, or to sell as is.
-                     
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus sed cum dolores, dicta quas
+                    deserunt, nulla nostrum minima voluptatibus distinctio delectus. Dicta quos consequatur voluptates
+                    magnam, ex reiciendis nobis consectetur.
                 </p>
-            </article>
+                <a href="{% url 'list-running-auctions' %}" class="btn">More Properties</a>
+            </div>
 
-            <article class="category">
-                <span class="category__icon"><i class="uil uil-wall"></i>
-                </span>
-                <h5>Standard residential Properties</h5>
-                <p>Standard construction properties are those constructed with brick and/or block walls under a tiled pitched roof sat on concrete foundations.
-                     
-                </p>
-            </article>
+            <div class="categories__right">
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-home"></i>
+                    </span>
+                    <h5>Unmoderised house and flats</h5>
+                    <p>
+                        We’re often asked whether it’s a good idea to carry out improvement work to an unmodernised
+                        property, or to sell as is.
 
-            <article class="category">
-                <span class="category__icon"><i class="uil uil-usd-circle"></i>
-                </span>
-                <h5>Poor Condition Properties</h5>
-                <p>There will be people who see potential in the property and it’s important to open the property up to the widest possible audience.</p>
-            </article>
+                    </p>
+                </article>
 
-            <article class="category">
-                <span class="category__icon"><i class="uil uil-megaphone"></i></span>
-                <h5>Land Properties</h5>
-                <p>Service land who is betting for sell. </p>
-            </article>
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-wall"></i>
+                    </span>
+                    <h5>Standard residential Properties</h5>
+                    <p>Standard construction properties are those constructed with brick and/or block walls under a
+                        tiled pitched roof sat on concrete foundations.
 
-            <article class="category">
-                <span class="category__icon"><i class="uil uil-building"></i>
-                </span>
-                <h5>Building Properties</h5>
-                <p> Standard Building are also for auction to bet. </p>
-            </article>
+                    </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-usd-circle"></i>
+                    </span>
+                    <h5>Poor Condition Properties</h5>
+                    <p>There will be people who see potential in the property and it’s important to open the property up
+                        to the widest possible audience.</p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-megaphone"></i></span>
+                    <h5>Land Properties</h5>
+                    <p>Service land who is betting for sell. </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-building"></i>
+                    </span>
+                    <h5>Building Properties</h5>
+                    <p> Standard Building are also for auction to bet. </p>
+                </article>
 
 
-            <article class="category">
-                <span class="category__icon"><i class="uil uil-puzzle-piece"></i>
-                </span>
-                <h5>Plots properties</h5>
-                <p>
-                    Small Plots are betted to sell.
-                    
-                </p>
-            </article>
+                <article class="category">
+                    <span class="category__icon"><i class="uil uil-puzzle-piece"></i>
+                    </span>
+                    <h5>Plots properties</h5>
+                    <p>
+                        Small Plots are betted to sell.
 
-        </div>
+                    </p>
+                </article>
+
+            </div>
         </div>
     </section>
 
     <!---================================================END OF Properties==========================================-->
 
-    
+
 
 
 
@@ -149,143 +169,150 @@
         <div class="container courses__container">
             <article class="property">
                 <div class="property__image">
-                  <img src="{% static 'Bidder 15.jpg' %}">
+                    <img src="{% static 'Bidder 15.jpg' %}">
                 </div>
                 <div class="property_info">
                     <h4>Standard Residential Properties</h4>
-                <p>
-                    Properties are those constructed with brick and/or block walls 
-                </p><br>
-                <p><b>Price: 100K</b></p>
+                    <p>
+                        Properties are those constructed with brick and/or block walls
+                    </p><br>
+                    <p><b>Price: 100K</b></p>
                 </div>
             </article>
 
 
             <article class="property">
                 <div class="property__image">
-                  <img src="{% static 'Bidder 18.jpg' %}">
+                    <img src="{% static 'Bidder 18.jpg' %}">
                 </div>
                 <div class="property_info">
                     <h4>Land Plots</h4>
-                <p>
-                    Small $ Big Land Plots
-                        
+                    <p>
+                        Small $ Big Land Plots
 
-                </p><br><br>
-                <p><b>Price: 500K</b></p>
-                
+
+                    </p><br><br>
+                    <p><b>Price: 500K</b></p>
+
                 </div>
             </article>
 
             <article class="property">
                 <div class="property__image">
-                  <img src="{% static 'Bidder 17.jpg' %}">
+                    <img src="{% static 'Bidder 17.jpg' %}">
                 </div>
                 <div class="property_info">
                     <h4>Poor Condition Properties</h4>
-                <p>
-                    Poor type of Building or Houses.
-                </p><br><br>
+                    <p>
+                        Poor type of Building or Houses.
+                    </p><br><br>
 
-                <p><b>Price: 500K</b></p>
-                
+                    <p><b>Price: 500K</b></p>
+
                 </div>
             </article>
         </div>
     </section>
 
 
-   
-  <!--=============================FOOTER===========================-->
 
-  <footer>
-    <div class="container footer__container">
-        <div class="footer__1">
-            <a href="{% url 'home' %}" class="footer__logo"><h4>Bidder</h4></a>
-            <p>
-                ONLINE AUCTION MANAGEMENT SYSTEM
-            </p>
-        </div>
+    <!--=============================FOOTER===========================-->
 
-        <div class="footer__2">
-            <h4>Permalinks</h4>
-            <ul class="permalinks">
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'user-login' %}">Login</a></li>
-                <li><a href="{% url 'user-create' %}">Registration</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="property.html">Property</a></li>
-                <li><a href="{% url 'contact' %}">Contact</a></li>
-            </ul>
-        </div>
-
-        <div class="footer__3">
-            <h4>Primacy</h4>
-            <ul class="privacy">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms and conditions</a></li>
-                <li><a href="#">Refund Policy</a></li>
-            </ul>
-        </div>
-
-        <div class="footer__4">
-            <h4>Contact Us</h4>
-            <div>
-                <p>+91 0000000000</p>
-                <p>care@bidder.com</p>
+    <footer>
+        <div class="container footer__container">
+            <div class="footer__1">
+                <a href="{% url 'home' %}" class="footer__logo">
+                    <h4>Bidder</h4>
+                </a>
+                <p>
+                    ONLINE AUCTION MANAGEMENT SYSTEM
+                </p>
             </div>
-            
-        
 
-        
-        <ul class="footer__socials ">
-            <li>
-                <a href="#"><i class="uil uil-facebook-f"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="uil uil-instagram-alt"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="uil uil-twitter"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="uil uil-linkedin-alt"></i></a>
-            </li>
-        </ul>
-    </div>
+            <div class="footer__2">
+                <h4>Permalinks</h4>
+                <ul class="permalinks">
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    {% if not user.is_authenticated %}
+                    <li><a href="{% url 'user-login' %}">Login</a></li>
+                    <li><a href="{% url 'user-create' %}">Registration</a></li>
+                    {% else %}
+                    <li><a href="{% url 'user-logout' %}">Logout</a></li>
+                    {% endif %}
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'list-running-auctions' %}">Property</a></li>
+                    <li><a href="{% url 'contact' %}">Contact</a></li>
+                </ul>
+            </div>
 
-    
-    </div>
-    
-    <div class="footer__copyright">
-        <small>Copyright &copy; Bidder</small>
-    </div>
-</footer>
+            <div class="footer__3">
+                <h4>Primacy</h4>
+                <ul class="privacy">
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and conditions</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__4">
+                <h4>Contact Us</h4>
+                <div>
+                    <p>+91 0000000000</p>
+                    <p>care@bidder.com</p>
+                </div>
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="{% static 'js/main.js' %}"></script>
+
+                <ul class="footer__socials ">
+                    <li>
+                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="uil uil-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                    </li>
+                </ul>
+            </div>
 
 
-<script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      // when window width is >= 600px
-      breakpoints: {
-        slidesPerView: 2
-      }
-    });
-  </script>
+        </div>
+
+        <div class="footer__copyright">
+            <small>Copyright &copy; Bidder</small>
+        </div>
+    </footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+
+
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 30,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            // when window width is >= 600px
+            breakpoints: {
+                slidesPerView: 2
+            }
+        });
+    </script>
 
 
 
 
 
 </body>
+
 </html>
