--- a/templates/login.html
+++ b/templates/login.html
@@ -31,14 +31,14 @@
   <nav>
     <div class="container nav__container">
       <a href="/">
-        <h4>Bidder</h4>
+        <h4>Welcome to Bidder!</h4>
       </a>
       <ul class="nav__menu">
         <li><a href="/">Home</a></li>
         <li><a href="{% url 'user-login' %}">Login</a></li>
         <li><a href="{% url 'user-create' %}">Registration</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="property.html">Property</a></li>
+        <li><a href="{% url 'list-running-auctions' %}">Property</a></li>
         <li><a href="{% url 'contact' %}">Contact</a></li>
       </ul>
       <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
